{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 260,
  "lineage": "81e6055f-de5b-6ecb-ef7d-eccd15c9a977",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:829250931565:internet-gateway/igw-0c06536fe4734e4b1",
            "id": "igw-0c06536fe4734e4b1",
            "owner_id": "829250931565",
            "tags": {
              "Name": "gko-prework-uc1-igw-c592c34b"
            },
            "tags_all": {
              "Name": "gko-prework-uc1-igw-c592c34b"
            },
            "vpc_id": "vpc-0ca399ea6d2e49a07"
          },
          "dependencies": [
            "aws_vpc.main",
            "random_id.vpc_display_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:829250931565:route-table/rtb-0744990fb16c877d9",
            "id": "rtb-0744990fb16c877d9",
            "owner_id": "829250931565",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c06536fe4734e4b1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "gko-prework-uc1-route-table-c592c34b"
            },
            "tags_all": {
              "Name": "gko-prework-uc1-route-table-c592c34b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ca399ea6d2e49a07"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main",
            "random_id.vpc_display_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_associations",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fdb87efda31d0aab",
            "route_table_id": "rtb-0744990fb16c877d9",
            "subnet_id": "subnet-02874259719c81fb5"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "random_id.vpc_display_id"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-036c112744cca5983",
            "route_table_id": "rtb-0744990fb16c877d9",
            "subnet_id": "subnet-028377576397b211d"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "random_id.vpc_display_id"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bf7c3fe1402e8d5a",
            "route_table_id": "rtb-0744990fb16c877d9",
            "subnet_id": "subnet-094f7f34412e0b456"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "random_id.vpc_display_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rabbitmq_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:829250931565:security-group/sg-03276ca0122096385",
            "description": "AWS Resource created by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03276ca0122096385",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "RabbitMQ",
                "from_port": 5672,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5672
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "rabbitmq_security_group_c592c34b",
            "name_prefix": "",
            "owner_id": "829250931565",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gko-prework-uc1-sg-c592c34b"
            },
            "tags_all": {
              "Name": "gko-prework-uc1-sg-c592c34b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ca399ea6d2e49a07"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "random_id.vpc_display_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:829250931565:subnet/subnet-02874259719c81fb5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02874259719c81fb5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "829250931565",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gko-prework-uc1-public-subnet-0-c592c34b"
            },
            "tags_all": {
              "Name": "gko-prework-uc1-public-subnet-0-c592c34b"
            },
            "vpc_id": "vpc-0ca399ea6d2e49a07"
          },
          "dependencies": [
            "aws_vpc.main",
            "random_id.vpc_display_id"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:829250931565:subnet/subnet-028377576397b211d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-028377576397b211d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "829250931565",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gko-prework-uc1-public-subnet-1-c592c34b"
            },
            "tags_all": {
              "Name": "gko-prework-uc1-public-subnet-1-c592c34b"
            },
            "vpc_id": "vpc-0ca399ea6d2e49a07"
          },
          "dependencies": [
            "aws_vpc.main",
            "random_id.vpc_display_id"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:829250931565:subnet/subnet-094f7f34412e0b456",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-094f7f34412e0b456",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "829250931565",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gko-prework-uc1-public-subnet-2-c592c34b"
            },
            "tags_all": {
              "Name": "gko-prework-uc1-public-subnet-2-c592c34b"
            },
            "vpc_id": "vpc-0ca399ea6d2e49a07"
          },
          "dependencies": [
            "aws_vpc.main",
            "random_id.vpc_display_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:829250931565:vpc/vpc-0ca399ea6d2e49a07",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-035e2a70f4800ed22",
            "default_route_table_id": "rtb-0e39d43119027abea",
            "default_security_group_id": "sg-08df51c161d25fc9d",
            "dhcp_options_id": "dopt-c092b1ab",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ca399ea6d2e49a07",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e39d43119027abea",
            "owner_id": "829250931565",
            "tags": {
              "Name": "gko-prework-uc1-c592c34b"
            },
            "tags_all": {
              "Name": "gko-prework-uc1-c592c34b"
            }
          },
          "dependencies": [
            "random_id.vpc_display_id"
          ]
        }
      ]
    }
  ]
}